--- a/public/estadisticas-jugadores.html
+++ b/public/estadisticas-jugadores.html
@@ -6,76 +6,70 @@
     <title>Estadísticas jugadores</title>
     <style>
         :root{
-          --bg: transparent;            /* pon #0b0f14 si no es overlay */
-          --ink: #e8eef9;
-          --muted:#9bb0c9;
-          --a:#6bd3ff;                  /* lado A */
-          --b:#ffba5c;                  /* lado B */
+          --bg: transparent;  /* usa #0b0f14 si no es overlay */
+          --ink:#e8eef9; --muted:#9bb0c9;
+          --a:#6bd3ff;  /* color lado A */
+          --b:#ffba5c;  /* color lado B */
           --radius:22px;
         }
         *{box-sizing:border-box}
         html,body{height:100%}
-        body{
-          margin:0;background:var(--bg);color:var(--ink);
-          font-family:system-ui,Segoe UI,Roboto,Ubuntu,Arial;
-        }
-        .screen{
-          min-height:100vh;display:grid;place-items:center;padding:24px;
-        }
+        body{margin:0;background:var(--bg);color:var(--ink);
+             font-family:system-ui,Segoe UI,Roboto,Ubuntu,Arial}
+        .screen{min-height:100vh;display:grid;place-items:center;padding:24px}
         .frame{
-          width:min(1600px,95vw);
-          border-radius:var(--radius);
-          padding:26px;
-          background:rgba(18,24,33,.75);
+          width:min(1800px,96vw); border-radius:var(--radius); padding:28px;
+          background:rgba(18,24,33,.78); backdrop-filter: blur(6px);
           box-shadow:0 30px 80px rgba(0,0,0,.40), inset 0 0 0 2px rgba(255,255,255,.06);
-          backdrop-filter: blur(6px);
         }
-        .title{
-          text-align:center;font-weight:900;letter-spacing:.6px;
-          font-size:clamp(18px,2.4vw,28px); margin-bottom:18px;
-          text-shadow:0 2px 12px rgba(0,0,0,.45);
-        }
+        .title{ text-align:center; font-weight:900; letter-spacing:.6px;
+                font-size:clamp(18px,2.4vw,28px); margin-bottom:18px;
+                text-shadow:0 2px 12px rgba(0,0,0,.45);}
         .grid{
-          display:grid;grid-template-columns:1fr clamp(90px,10vw,120px) 1fr;gap:20px;align-items:center;
+          display:grid; grid-template-columns:1fr clamp(90px,10vw,120px) 1fr;
+          gap:24px; align-items:center;
         }
         .vs{
-          width:clamp(90px,10vw,120px);height:clamp(90px,10vw,120px);border-radius:999px;
-          display:grid;place-items:center;font-weight:900;color:#cfe2ff;
+          width:clamp(90px,10vw,120px); height:clamp(90px,10vw,120px); border-radius:999px;
+          display:grid; place-items:center; font-weight:900; color:#cfe2ff;
           background:radial-gradient(60% 60% at 50% 40%, #1d2a3c, #0d1520);
           box-shadow:0 0 0 2px #26364d, 0 0 28px rgba(90,140,255,.35);
-          font-size:clamp(24px,2.4vw,30px);letter-spacing:1px;
+          font-size:clamp(24px,2.4vw,30px); letter-spacing:1px;
         }
-        .col{display:grid;grid-template-columns:140px 1fr;gap:16px}
+        .col{display:grid; grid-template-columns:140px 1fr; gap:20px; align-items:start}
+        .figure{
+          width:44px;height:44px;opacity:.9
+        }
+        .fig-left{position:absolute;left:-56px;top:-2px}
+        .fig-right{position:absolute;right:-56px;top:-2px; transform:scaleX(-1)}
         .logo{
-          width:140px;height:140px;border-radius:18px;overflow:hidden;
+          width:140px;height:140px;border-radius:18px;overflow:hidden;position:relative;
           display:grid;place-items:center;background:#0e1620;border:2px solid #2a3a4d;
           box-shadow:0 10px 30px rgba(0,0,0,.35)
         }
         .logo img{width:100%;height:100%;object-fit:cover}
-        .head{display:flex;flex-direction:column;gap:6px}
-        .name{font-weight:900;line-height:1.02;font-size:clamp(22px,2.3vw,28px)}
+        .head{display:flex;flex-direction:column;gap:8px}
+        .name{font-weight:900;line-height:1.05;font-size:clamp(22px,2.4vw,30px)}
         .team{font-size:clamp(12px,1.2vw,14px);color:var(--muted)}
-        .val{display:inline-block;margin-left:10px;font-size:12px;font-weight:900;padding:4px 10px;border-radius:999px}
+        .val{display:inline-block;margin-left:10px;font-size:12px;font-weight:900;
+             padding:5px 10px;border-radius:999px}
         .a .val{color:#cfefff;background:rgba(107,211,255,.12);border:1px solid rgba(107,211,255,.35)}
         .b .val{color:#ffe7c4;background:rgba(255,186,92,.12); border:1px solid rgba(255,186,92,.35)}
-        .stats{
-          margin-top:10px;
-          display:grid;grid-template-columns:repeat(3,1fr);gap:12px
-        }
+        .stack{margin-top:6px;display:flex;flex-direction:column;gap:10px;max-width:520px}
         .pill{
-          background:#0f1724;border:1px solid #2a3a4d;border-radius:14px;padding:10px 12px;
-          display:flex;flex-direction:column;align-items:center;gap:6px;min-height:86px;
-          box-shadow:inset 0 0 0 1px rgba(255,255,255,.04);
+          background:#0f1724;border:1px solid #2a3a4d;border-radius:14px;padding:12px 14px;
+          display:flex;align-items:center;justify-content:space-between;min-height:64px;
+          box-shadow:inset 0 0 0 1px rgba(255,255,255,.04)
         }
         .a .pill{box-shadow:inset 0 0 0 1px rgba(107,211,255,.12)}
         .b .pill{box-shadow:inset 0 0 0 1px rgba(255,186,92,.12)}
-        .v{font-size:clamp(20px,2.2vw,26px);font-weight:900}
-        .k{font-size:11px;color:var(--muted);letter-spacing:.3px}
-        .split{font-size:12px;color:#b6c7de}
-        @media (max-width:980px){
+        .k{font-size:12px;color:var(--muted);letter-spacing:.3px}
+        .v{font-size:clamp(20px,2.2vw,28px);font-weight:900;margin-left:auto}
+        .sub{font-size:12px;color:#b6c7de;margin-left:10px}
+        @media (max-width:1000px){
           .grid{grid-template-columns:1fr;gap:18px}
-          .col{grid-template-columns:110px 1fr}
-          .logo{width:110px;height:110px}
+          .col{grid-template-columns:120px 1fr}
+          .logo{width:120px;height:120px}
           .vs{margin:0 auto}
         }
     </style>
@@ -93,63 +87,93 @@
 </div>
 
 <script>
-    // Permite ?bg, ?a, ?b para colores
-    const q=new URLSearchParams(location.search);
-    if(q.get('bg')) document.documentElement.style.setProperty('--bg', q.get('bg'));
-    if(q.get('a'))  document.documentElement.style.setProperty('--a', q.get('a'));
-    if(q.get('b'))  document.documentElement.style.setProperty('--b', q.get('b'));
+    // Helpers de formato
+    const pct  = (m,a)=> a>0 ? (100*m/a).toFixed(1)+'%' : '—';
+    const ma   = (m,a)=> `${m}/${a}`;
+    const name = p => [p.first||'', p.last||''].join(' ').trim() || ('#'+(p.num||''));
 
-    const pct = (m,a)=> a>0 ? (100*m/a).toFixed(1)+'%' : '—';
-    const split = (m,a)=> `${m}/${a}`;
-    const fullName = p => [p.first||'', p.last||''].join(' ').trim() || ('#'+(p.num||''));
+    // Cache de logos por nombre de equipo
+    const logoCache = new Map();
 
-    function logoCandidates(team){
-      const name = (team?.name||'').trim();
-      const metaLogo = (team?.logo||'').trim(); // del CSV meta (url o ruta)
-      const norm = s => s.replace(/\s+/g,'_');
-      const c = [];
-      if (metaLogo) {
-        // si es url absoluta o data-url, úsala; si parece ruta, intenta en /plantillas
-        if (/^data:|^https?:/.test(metaLogo)) c.push(metaLogo);
-        else c.push(`/plantillas/${metaLogo}`);
+    // Lee el META.logo desde /plantillas/<equipo>.csv (o variantes) y devuelve URL absoluta
+    async function logoFromPlantilla(teamName){
+      if (!teamName) return '';
+      if (logoCache.has(teamName)) return logoCache.get(teamName);
+
+      const variants = (base)=>{
+        const n1 = base;
+        const n2 = base.replace(/\s+/g,'_');
+        const n3 = base.replace(/\s+/g,'%20');
+        return [
+          `/plantillas/${n1}.csv`,
+          `/plantillas/${n2}.csv`,
+          `/plantillas/${n3}.csv`
+        ];
+      };
+
+      async function tryFetch(url){
+        try{
+          const r = await fetch(url, {cache:'no-store'});
+          if(!r.ok) return null;
+          const text = await r.text();
+          const sep = text.includes(';') ? ';' : ',';
+          const lines = text.split(/\r?\n/).filter(Boolean);
+          if(!lines.length) return null;
+          const headers = lines[0].split(sep).map(h=>h.trim().toLowerCase());
+          for(let i=1;i<lines.length;i++){
+            const cells = lines[i].split(sep).map(c=>c.trim());
+            const row = Object.fromEntries(headers.map((h,idx)=>[h, cells[idx]||'']));
+            const type = (row.type||'').toLowerCase();
+            if(type==='meta' && row.logo){
+              let lg = row.logo.trim();
+              if (!/^https?:|^data:|^\//.test(lg)) lg = '/plantillas/'+lg.replace(/^\.?\//,'');
+              return lg;
+            }
+          }
+        }catch(_){ return null; }
+        return null;
       }
-      c.push(`/plantillas/${norm(name)}.png`,
-             `/plantillas/${norm(name)}.jpg`,
-             `/plantillas/${norm(name)}.svg`,
-             `/plantillas/${norm(name)}.webp`);
-      return c;
+
+      const tries = variants(teamName);
+      for(const url of tries){
+        const hit = await tryFetch(url);
+        if(hit){ logoCache.set(teamName, hit); return hit; }
+      }
+      logoCache.set(teamName, ''); // not found
+      return '';
     }
 
-    function playerView(p, team, sideClass){
-      const root = document.createElement('div'); root.className='col '+sideClass;
+    // Render de una columna
+    function renderSide(root, pl, team, sideClass, logoUrl){
+      root.className = 'col ' + sideClass;
       root.innerHTML = `
-        <div class="logo"><img alt="logo ${team?.name||''}" loading="eager"></div>
+        <div class="logo">
+          <svg class="figure ${sideClass==='a'?'fig-left':'fig-right'}" viewBox="0 0 24 24" fill="none">
+            <circle cx="12" cy="5" r="3" fill="${sideClass==='a'?'var(--a)':'var(--b)'}"/>
+            <path d="M12 8c-3 0-5 2.5-5 5.5V22h2v-5h6v5h2v-8.5C17 10.5 15 8 12 8Z" fill="currentColor" opacity=".35"/>
+          </svg>
+          <img alt="logo ${team?.name||''}">
+        </div>
         <div class="head">
-          <div class="name">${fullName(p)} <span class="val">VAL ${p.VAL??0}</span></div>
+          <div class="name">${name(pl)} <span class="val">VAL ${pl.VAL??0}</span></div>
           <div class="team">${team?.name||''}</div>
-          <div class="stats">
-            <div class="pill"><div class="v">${p.PTS||0}</div><div class="k">PTS</div></div>
-            <div class="pill"><div class="v">${(p.OREB||0)+(p.DREB||0)}</div><div class="k">REB</div></div>
-            <div class="pill"><div class="v">${p.AST||0}</div><div class="k">AST</div></div>
-            <div class="pill"><div class="v">${p.STL||0}</div><div class="k">ROB</div></div>
-            <div class="pill">
-              <div class="v">${pct(p._2PM||0,p._2PA||0)}</div>
-              <div class="k">% T2</div>
-              <div class="split">${split(p._2PM||0,p._2PA||0)}</div>
+          <div class="stack">
+            <div class="pill"><span class="k">PTS</span><span class="v">${pl.PTS||0}</span></div>
+            <div class="pill"><span class="k">REB</span><span class="v">${(pl.OREB||0)+(pl.DREB||0)}</span></div>
+            <div class="pill"><span class="k">AST</span><span class="v">${pl.AST||0}</span></div>
+            <div class="pill"><span class="k">ROB</span><span class="v">${pl.STL||0}</span></div>
+            <div class="pill"><span class="k">% T2</span>
+              <span class="v">${pct(pl._2PM||0,pl._2PA||0)}</span>
+              <span class="sub">${ma(pl._2PM||0,pl._2PA||0)}</span>
             </div>
-            <div class="pill">
-              <div class="v">${pct(p._3PM||0,p._3PA||0)}</div>
-              <div class="k">% T3</div>
-              <div class="split">${split(p._3PM||0,p._3PA||0)}</div>
+            <div class="pill"><span class="k">% T3</span>
+              <span class="v">${pct(pl._3PM||0,pl._3PA||0)}</span>
+              <span class="sub">${ma(pl._3PM||0,pl._3PA||0)}</span>
             </div>
           </div>
         </div>`;
-      // logos con fallback
       const img = root.querySelector('img');
-      const cands = logoCandidates(team);
-      let i=0; img.onerror=()=>{ i++; if(i<cands.length) img.src=cands[i]; };
-      img.src=cands[i];
-      return root;
+      img.src = logoUrl || '';
     }
 
     function topTwoByVal(data){
@@ -159,21 +183,27 @@
       return [arr[0], arr[1]].filter(Boolean);
     }
 
-    async function loop(){
+    async function tick(){
       try{
         const r = await fetch('/api/live', {cache:'no-store'});
         if(r.ok){
           const data = await r.json();
           const [A,B] = topTwoByVal(data);
-          const L=document.getElementById('left'), R=document.getElementById('right');
-          L.innerHTML=''; R.innerHTML='';
-          if (A) L.replaceWith(playerView(A.pl, A.team, 'a')), L.id='left';
-          if (B) R.replaceWith(playerView(B.pl, B.team, 'b')), R.id='right';
+          const L = document.getElementById('left');
+          const R = document.getElementById('right');
+
+          let logoA = (A?.team?.logo)||'';
+          let logoB = (B?.team?.logo)||'';
+          if(!logoA && A) logoA = await logoFromPlantilla(A.team?.name||'');
+          if(!logoB && B) logoB = await logoFromPlantilla(B.team?.name||'');
+
+          if (A) renderSide(L, A.pl, A.team, 'a', logoA);
+          if (B) renderSide(R, B.pl, B.team, 'b', logoB);
         }
-      }catch(e){/*silent*/}
-      setTimeout(loop, 500);
+      }catch(e){ /* silent */ }
+      setTimeout(tick, 600);
     }
-    loop();
+    tick();
 </script>
 </body>
 </html>
